# frac

./: app.py  build_exe.bat  build_exe.ps1  pyproject.toml
frac_pump_chart_program/: README.md  __init__.py  __main__.py  app.py  sample_frac_pump_data.csv
