[project]
name = "frac-pump-chart-program"
version = "0.1.0"
description = "Streamlit app for charting frac pump CSV data"
readme = "frac_pump_chart_program/README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "pandas",
    "plotly"
]

[project.scripts]
frac-pump-chart = "frac_pump_chart_program.__main__:main"
